# YOLOv5-TensorRT-lib-Python

./: CMakeLists.txt  README-en.md  README.md  labels.py  main.cpp  main.py  yolo_detector.py  yolo_detector_v1.py
include/: common.h  public.h  yolo_infer.h  yololayer.h
src/: yolo_infer.cpp  yololayer.cu
